--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 			</ul>
 			<ul class="fartists">
 				<li>
-					<a target="_blank" href="http://clocktower.org/person/ginny-benson">Ginny BensonM</a> + <a target="_blank" href="https://www.facebook.com/chrissy.reilly">Chrissy Riley</a>
+					<a target="_blank" href="http://clocktower.org/person/ginny-benson">Ginny Benson</a> + <a target="_blank" href="https://www.facebook.com/chrissy.reilly">Chrissy Riley</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://vimeo.com/95370451">Louise Foo + Martha Skou</a>
