changing jays website

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<a target="_blank" href="http://www.jasonsigal.cc/portfolio/sonic-scrolls/">Jason Sigal</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://www.mns.com/agents/jheiselmann">Jay Heiselmann</a>
+					<a target="_blank" href="http://vimeo.com/21006646">Jay Heiselmann</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://jeffkornberg.bandcamp.com/">Jeff Kornberg</a>
