--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<a target="_blank" href="http://www.beckyjams.com/">Becky James</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://burgers.flavors.me/">Burgers Rana</a>
+					<a target="_blank" href="http://adultacid.tumblr.com">Burgers Rana</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://chrisuphues.com/">Chris Uphues</a>
@@ -181,7 +181,7 @@
 					<a target="_blank" href="http://rouxpz.com/grillz/">Roopa Vasudevan</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://profile.ak.fbcdn.net/hprofile-ak-xap1/t1.0-1/10348179_298983153596633_8026017166172170262_n.jpg">Sammi Rana</a>
+					<a target="_blank" href="http://thenumerators.tumblr.com">Sammi Rana</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://www.imposemagazine.com/features/sarah-everton-bleeding-rainbow">Sarah Everton</a>
@@ -219,7 +219,7 @@
 			</ul>
 			<ul class="fartists">
 				<li>
-					<a target="_blank" href="http://clocktower.org/person/ginny-benson">Ginny Benson</a> + <a target="_blank" href="https://www.facebook.com/chrissy.reilly">Chrissy Riley</a>
+					<a target="_blank" href="http://clocktower.org/person/ginny-benson">Ginny Benson</a> + <a target="_blank" href="https://halfinchbox.com">Chrissy Reilly</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://vimeo.com/95370451">Louise Foo + Martha Skou</a>
@@ -273,28 +273,28 @@
 					<a target="_blank" href="http://hausofsnakes.tumblr.com/">Peter Fankhauser</a>
 				</li>
 				<li class="group">
-					<h3>Death By Audio Arcade</h3>
+					<h3><a target="_blank" href="http://deathbyaudioarcade.com">Death By Audio Arcade</a></h3>
 				</li>
 				<li>
-					<a target="_blank" href="http://deathbyaudioarcade.com">Ben Serviss</a>
+					<a target="_blank" href="http://www.studio-mercato.com/crystal-brawl/">Ben Serviss</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://deathbyaudioarcade.com">Chris Hernandez</a>
+					<a target="_blank" href="http://www.studio-mercato.com/crystal-brawl/">Chris Hernandez</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://deathbyaudioarcade.com">Josh Raab</a>
+					<a target="_blank" href="http://www.studio-mercato.com/crystal-brawl/">Josh Raab</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://deathbyaudioarcade.com">Jon Stokes</a>
+					<a target="_blank" href="http://www.studio-mercato.com/crystal-brawl/">Jon Stokes</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://deathbyaudioarcade.com">K Anthony Marefat</a>
+					<a target="_blank" href="http://playfutbolforever.com/">K Anthony Marefat</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://deathbyaudioarcade.com">Michael Kahane</a>
+					<a target="_blank" href="http://playfutbolforever.com/">Michael Kahane</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://deathbyaudioarcade.com">Nick Santaniello</a>
+					<a target="_blank" href="http://powerboat.robysoft.net/">Nick Santaniello</a>
 				</li>
 			</ul>
 		</div>
