--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
 					<a target="_blank" href="http://www.kleebtronics.com/">Mark Kleeb</a>
 				</li>
 				<li>
+					<a target="_blank" href="http://marthamoszczynski.com">Martha Moszczynski</a>
+				</li>
+				<li>
 					<a target="_blank" href="http://maryscahill.net/">Mary Scahill</a>
 				</li>
 				<li>
