--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	</head>
 
 	<body>
-		<img id="first-floor" src="death_by_art_large.png">
+		<a href="https://s3.amazonaws.com/www.ripdba.com/dba_map_colors.pdf"><img id="first-floor" src="death_by_art_large.png">
 		<img id="second-floor" src="death_by_art_floor.png">
+	</a>
 
 		<div id="event-info">
 			<div id="info">
