--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<a href="https://s3.amazonaws.com/www.ripdba.com/dba_map_colors.pdf"><img id="first-floor" src="death_by_art_large.png">
+		<a target="_blank" href="https://s3.amazonaws.com/www.ripdba.com/dba_map_colors.pdf"><img id="first-floor" src="death_by_art_large.png">
 		<img id="second-floor" src="death_by_art_floor.png">
 	</a>
 
