--- a/index.html
+++ b/index.html
@@ -238,7 +238,16 @@
 					<h3>R.I.P. D.I.Y.</h3>
 				</li>
 				<li>
+					<a target="_blank" href="#">Edwina Hay</a>
+				</li>
+				<li>
+					<a target="_blank" href"#">Eric Phipps</a>
+				</li>
+				<li>
 					<a target="_blank" href="http://estersegrettophotography.com/">Ester Segretto</a>
+				</li>
+				<li>
+					<a target="_blank" href"#">Harriet Roberts</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://www.jackieroman.com/">Jackie Roman</a>
@@ -258,6 +267,10 @@
 				<li>
 					<a target="_blank" href="#">Sam Leung</a>
 				</li>
+				<li>
+					<a target="_blank" href="#">Teresa Sampson</a>
+				</li>
+
 				<li class="group">
 					<h3>Audio Delphi Shrine</h3>
 				</li>
