--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
 					<a target="_blank" href="http://prestonspurlock.tumblr.com/">Preston Spurlock</a>
 				</li>
 				<li>
+					<a target="_blank" href="http://www.visualmechanics.co/">Rob Erickson</a>
+				</li>
+				<li>
 					<a target="_blank" href="http://rouxpz.com/grillz/">Roopa Vasudevan</a>
 				</li>
 				<li>
