--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script>
 		$( document ).ready(function() {
 			$("#close").click(function(){
-				$("#modal").addClass("remove");
+				$("#holder").addClass("remove");
 			});			
 		});
 		</script>
@@ -333,11 +333,13 @@
 			</ul>
 		</div>
 
-		<div id="modal">
-			<div id="close">X</div>
-			<p>The show is <b>FREE</b> on <b>THURSDAY NOV 6TH</b> plus every <b>Saturday-Sunday</b> from <b>2PM-7PM</b> until <b>NOVEMBER 22ND</b></p>
+		<div id="holder">
+			<div id="modal">
+				<div id="close">X</div>
+				<p>The show is <b>FREE</b> on <b>THURSDAY NOV 6TH</b> plus every <b>Saturday-Sunday</b> from <b>2PM-7PM</b> until <b>NOVEMBER 22ND</b></p>
 
-			<p>The show will <b>ALSO</b> be open to the patrons of the venue <b>EVERY EVENING</b> from <b>8PM to MIDNIGHT</b> included with the price of admission.</p>
+				<p>The show will <b>ALSO</b> be open to the patrons of the venue <b>EVERY EVENING</b> from <b>8PM to MIDNIGHT</b> included with the price of admission.</p>
+			</div>
 		</div>
 	</body>
 </html>
