--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
 					<h3>R.I.P. D.I.Y.</h3>
 				</li>
 				<li>
-					<a target="_blank" href="#">Ebru Yildiz</a>
+					<a target="_blank" href="http://www.ebruyildiz.net/">Ebru Yildiz</a>
 				</li>
 				<li>
-					<a target="_blank" href="#">Edwina Hay</a>
+					<a target="_blank" href="http://www.thisisnotaphotograph.com/">Edwina Hay</a>
 				</li>
 				<li>
 					<a target="_blank" href"#">Eric Phipps</a>
@@ -286,9 +286,7 @@
 				<li>
 					<a target="_blank" href="https://www.facebook.com/keith.marlowe.5">Keith Marlowe</a>
 				</li>
-				<li>
-					<a target="_blank" href="http://www.hereforthebands.com/">Marcus Lauer</a>
-				</li>
+			
 				<li>
 					<a target="_blank" href="http://www.nickiishmael.com/">Nicki Ishmael</a>
 				</li>
@@ -299,7 +297,7 @@
 					<a target="_blank" href="#">Teresa Sampson</a>
 				</li>
 				<li>
-					<a target="_blank" href="#">Walter Wlodarczyk</a>
+					<a target="_blank" href="http://www.walterwlodarczyk.com/">Walter Wlodarczyk</a>
 				</li>
 
 				<li class="group">
