--- a/index.html
+++ b/index.html
@@ -206,8 +206,12 @@
 					<a target="_blank" href="http://prestonspurlock.tumblr.com/">Preston Spurlock</a>
 				</li>
 				<li>
+					<a target="_blank" href="http://killeracid.com">Rob Corradetti</a>
+				</li>
+				<li>
 					<a target="_blank" href="http://www.visualmechanics.co/">Rob Erickson</a>
 				</li>
+
 				<li>
 					<a target="_blank" href="http://rouxpz.com/grillz/">Roopa Vasudevan</a>
 				</li>
