--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 					<a target="_blank" href="http://clocktower.org/person/ginny-benson">Ginny Benson</a> + <a target="_blank" href="https://halfinchbox.com">Chrissy Reilly</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://vimeo.com/95370451">Louise Foo + Martha Skou</a>
+					<a target="_blank" href="http://www.visualsoundsynthesis.com">Louise Foo + Martha Skou</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://deathbyaudio.net/">Oliver Ackermann + Matt Conboy</a>
