--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
 					<a target="_blank" href="http://nysoundworks.org/songcabinet/">Nick Yulman</a>
 				</li>
 				<li>
+					<a target="_blank" href="http://www.peterfeigenbaum.com/">Peter Feigenbaum</a>
+				</li>
+				<li>
 					<a target="_blank" href="http://prestonspurlock.tumblr.com/">Preston Spurlock</a>
 				</li>
 				<li>
