--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 					<a target="_blank" href="http://images.jambase.com/bands/TheMuggabears/default/artist300.jpg">Emily Ambruso</a>
 				</li>
 				<li>
+					<a target="_blank" href="http://www.flipswitchfilms.com">Eric Williams</a>
+				</li>
+				<li>
 					<a target="_blank" href="http://www.eun-ha.com/">Eun-ha Paek</a>
 				</li>
 				<li>
