--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 					<a target="_blank" href="http://biglawcountryclub.com">Big Law Country Club</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://www.kendallefiasco.com/">Mackswell Sherman</a>
+					<a target="_blank" href="#">Mackswell Sherman</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://hausofsnakes.tumblr.com/">Peter Fankhauser</a>
