--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 					<a target="_blank" href="http://biglawcountryclub.com">Big Law Country Club</a>
 				</li>
 				<li>
-					<a target="_blank" href="http://www.kendallefiasco.com/">Mackswell Sherman</a>
+					<a target="_blank" href="#">Mackswell Sherman</a>
 				</li>
 				<li>
 					<a target="_blank" href="http://hausofsnakes.tumblr.com/">Peter Fankhauser</a>
@@ -362,7 +362,7 @@
 		<div id="holder">
 			<div id="modal">
 				<div id="close">X</div>
-				<p>The show is <b>FREE</b> on <b>THURSDAY NOV 6TH</b> plus every <b>Saturday-Sunday</b> from <b>2PM-7PM</b> until <b>NOVEMBER 22ND</b></p>
+				<p>The show is <b>FREE</b> on <b>THURSDAY NOV 6TH from 8PM to MIDNIGHT</b> plus every <b>Saturday-Sunday</b> from <b>2PM-7PM</b> until <b>NOVEMBER 22ND</b></p>
 
 				<p>The show will <b>ALSO</b> be open to the patrons of the venue <b>EVERY EVENING</b> from <b>8PM to MIDNIGHT</b> included with the price of admission.</p>
 			</div>
